force-app/main/default/objects/Business_Calendar__c/Business_Calendar__c.object-meta.xml
<CustomObject>
    <label>Business Calendar</label>
    <pluralLabel>Business Calendars</pluralLabel>
    <description>Business Calendar</description>
    <nameField>
        <label>Calendar Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>