force-app/main/default/objects/Business_Calendar__c/fields/End_Hour__c.field-meta.xml
<CustomField>
    <fullName>End_Hour__c</fullName>
    <label>End Hour</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <defaultValue>18</defaultValue>
    <description>End Hour</description>
</CustomField>