force-app/main/default/objects/Business_Calendar__c/fields/Start_Hour__c.field-meta.xml
<CustomField>
    <fullName>Start_Hour__c</fullName>
    <label>Start Hour</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <defaultValue>8</defaultValue>
    <description>Start Hour</description>
</CustomField>