force-app/main/default/objects/Business_Calendar__c/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <label>Timezone</label>
    <type>Text</type>
    <length>40</length>
    <description>Timezone</description>
</CustomField>